# enka

./: .gitignore  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
shinshin/: client.py
shinshin/models/: __init__.py  enka.py  enums.py
